--- a/app/globals.css
+++ b/app/globals.css
@@ -55,13 +55,14 @@ html, body {
 .site-header {
   width: 100%;
   margin-bottom: 40px;
+  justify-content: right;
 }
 
 .header-content {
   display: flex;
-  align-items: center;
-  justify-content: flex-start;  
-  gap: 40px; 
+  align-items: right;
+  justify-content: center;  
+  gap: 100px; 
 }
 
 .header-logo {
@@ -73,7 +74,6 @@ html, body {
   height: 104px;
   object-fit: contain;
   image-rendering: pixelated;
-  margin-left: -100px;
 }
 
 .header-text {
@@ -84,23 +84,24 @@ html, body {
 }
 
 .header-main-title {
-  font-size: 20px;
+  font-size: 10px;
   font-weight: bold;
   letter-spacing: 2px;
   color: var(--dark-blue);
   line-height: 1.2;
   margin: 0;
   text-transform: uppercase;
-  white-space: nowrap;
+  text-align: right;
 }
 
 .header-subtitle {
-  font-size: 12px;
+  font-size: 8px;
   color: var(--medium-gray);
   line-height: 1.4;
   margin: 0;
   opacity: 0.85;
   white-space: nowrap;
+  justify-content: right;
 }
 
 /* Header section with LAUNCHING SOON */
@@ -165,7 +166,13 @@ html, body {
 .hero-card{
   height:400px;
   border-radius:30px;
-  background: linear-gradient(180deg, var(--big-blue-start), var(--big-blue-end));
+  background: radial-gradient(
+    circle at center,
+    #0084ff,
+    #1f9cff 50%,
+    #a7c1d1 100%
+  );
+
   box-shadow: inset 0 40px 120px rgba(0,0,0,0.06);
   display:flex;
   align-items:center;
@@ -429,7 +436,7 @@ html, body {
 
 .mountains{
   left: -350px;
-  bottom: -419px;           
+  bottom: -300px;           
   width: 1000px;
   height: 1000px;
   image-rendering:pixelated;
@@ -836,9 +843,6 @@ img.pixel-art {
 
 .grass {
   position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
   height: 100%;
   width: 100%;
   z-index: 2;
