--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,8 @@
   --medium-gray: #8a8a8a;
   --yellow-gradient-start: #fff4b8;
   --yellow-gradient-end: #ffb84f;
+  --cursor-default: url("/cursors/coin-default.png") 16 16, auto;
+  --cursor-pointer: url("/cursors/coin-pointer.png") 16 16, pointer;
 }
 
 html {
@@ -1075,4 +1077,35 @@ img.pixel-art {
     --delay: 0s;
     animation: float 6s var(--delay) ease-in-out infinite;
   }
+}
+html, body, .page {
+  cursor: var(--cursor-default);
+}
+input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea {
+  cursor: text;
+}
+a[href],
+button:not(:disabled),
+[role="button"],
+input[type="button"]:not(:disabled),
+input[type="submit"]:not(:disabled),
+label,
+.player-btn,
+.playlist-item,
+.playlist-btn,
+.volume-icon,
+.volume-slider,
+.social-dot,
+.join-btn__wrapper button:not(:disabled),
+.survey-button {
+  cursor: var(--cursor-pointer);
+}
+
+/* Preserve the disabled look for buttons already styled elsewhere */
+button:disabled,
+.join-btn:disabled {
+  cursor: not-allowed;
 }
