--- a/app/globals.css
+++ b/app/globals.css
@@ -406,7 +406,6 @@ body {
   font-size: 1rem;
   letter-spacing: 1px;
   color: var(--deep-blue);
-  margin-bottom: 16px;
   font-weight: bold;
   position: relative;
   margin-bottom: 1rem;
@@ -806,11 +805,6 @@ body {
   overflow: hidden;
 }
 
-.social-dot:hover {
-  transform: scale(1.05);
-  box-shadow: 0 4px 12px rgba(212, 165, 116, 0.4);
-}
-
 .social-image {
   width: 100%;
   height: 100%;
@@ -1004,7 +998,20 @@ img.pixel-art {
   .tagline {
     font-size: 11px;
   }
+  .survey-button {
+    --font-size: 0.5rem;
+    right: 12px;
+    top: 10px;
+    padding: 10px 20px;
+    border-radius: 8px;
+  }
 
+  .dating-survey-button {
+    --font-size: 0.5rem;
+    top: 300px ;
+    padding: 10px 20px;
+    border-radius: 8px;
+  }
   .card-prog-svg {
     width: 100%;
     /* max-width: 350px; */
@@ -1018,15 +1025,13 @@ img.pixel-art {
 
   /* Mobile Music Player Styles */
   .music-player {
-    padding: 8px 16px;
-    gap: 12px;
-    border-radius: 16px;
     width: calc(100% - 32px);
     max-width: calc(100vw - 32px);
     left: 16px;
     right: 16px;
     transform: none;
     bottom: 16px;
+    height: 200px;
     flex-wrap: wrap;
     justify-content: center;
   }
